# ssm

./: .gitignore  README.md  pyproject.toml
example-conf/: ssm.conf
src/malathair/: ssm.py
src/malathair/ssm/: __init__.py  config.py  ssm.py
