[tool.poetry]
name = "malathair-ssm"
version = "1.2.1"
description = "SSH wrapper to simplify life"
authors = ["malathair <malathair@spectregate.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "malathair/ssm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4"
toml = "^0.10"

[tool.poetry.scripts]
ssm = 'malathair.ssm:main'
ssmconf = 'malathair.ssm:configure'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
